minor fix front page layout spacing + comments

--- a/static/css/comex.css
+++ b/static/css/comex.css
@@ -461,6 +461,10 @@ div.ccsection-footer {
   height: 2em;
 }
 
+.mediumspacerrow {
+  height: 4em;
+}
+
 .spacerrow {
   height: 8em;
 }
